--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@storyblok/nuxt": "^3.0.0-beta.3",
     "@tailwindcss/typography": "^0.5.0",
-    "axios": "^0.25.0"
+    "axios": "^0.25.0",
+    "vue-plugin-load-script": "^2.1.0"
   }
 }
